# FakeFS

./: .gitignore  CMakeLists.txt  README.md
src/fs/: def.h  fdmap.cc  ffs.h  init.c  main.c  util.c  util.h
src/fs/fuseops/: chmod.c  chown.c  create.c  flush.c  fsync.c  ftruncate.c  getattr.c  mkdir.c  open.c  read.c  readdir.c  readlink.c  release.c  rename.c  rmdir.c  statfs.c  symlink.c  truncate.c  utimens.c  write.c
src/lib/: ffs.h  init.c  main.c  util.c  util.h
